After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751507 - GimpImageWindow.constructed does not chain up to parent impl
GimpImageWindow.constructed does not chain up to parent impl
Status: RESOLVED FIXED
Product: GIMP
Classification: Other
Component: General
git master
Other All
: Normal normal
: 2.10
Assigned To: GIMP Bugs
GIMP Bugs
Depends on:
Blocks:
 
 
Reported: 2015-06-25 17:29 UTC by Alexander Larsson
Modified: 2015-08-17 23:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GimpImageWindow: Chain up from constructed (872 bytes, patch)
2015-06-25 17:34 UTC, Alexander Larsson
none Details | Review

Description Alexander Larsson 2015-06-25 17:29:32 UTC
This breaks the window-drag controllers in the gtk3 branch, but seems like a general bug.
Comment 1 Alexander Larsson 2015-06-25 17:34:54 UTC
Created attachment 306123 [details] [review]
GimpImageWindow: Chain up from constructed
Comment 2 Michael Natterer 2015-06-25 21:48:04 UTC
Oops please push :)
Comment 3 Alexander Larsson 2015-08-17 09:37:08 UTC
pushed to master