GimpImageWindow: Chain up from constructed

https://bugzilla.gnome.org/show_bug.cgi?id=751507